[package]
name = "hackathon-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-client = "1"
solana-sdk = "1"
anyhow = "1"
axum = "0.6"
serde = { version = "1.0.157", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
